# inherit-config

./: Cargo.toml  README.md  deny.toml
.github/workflows/: test.yml
core/: Cargo.toml
core/src/: lib.rs
core/tests/: derive_test.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs
