[workspace]
resolver = "2"
members = ["core", "derive"]

[workspace.package]
edition = "2024"
authors = ["share121 <me@s121.top>"]
license = "MIT"
repository = "https://github.com/share121/inherit-config"
keywords = ["config", "inherit"]
readme = "README.md"
homepage = "https://github.com/share121/inherit-config"

[workspace.dependencies]
inherit-config = { version = "0.1.1", path = "core" }
