[package]
name = "inherit-config"
description = "Inherit configuration from parent struct"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true

[lints]
workspace = true
