[package]
name = "inherit-config-derive"
version = "0.1.0"
description = "A derive macro to inherit config from parent struct"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0.101"
inherit-config.workspace = true
