[package]
name = "inherit-config-derive"
description = "A derive macro to inherit config from parent struct"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
inherit-config.workspace = true

[lints]
workspace = true
